# RAG-for-Optimized-Job-Search

./: AGENT_VS_CURRENT_ANALYSIS.md  Agent Configuration  Agent Features Guide  Agent Implementation  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.api  Dockerfile.ui  ENV_TEMPLATE.txt  OLLAMA_SETUP.md  QUICK_DEPLOY.md  README.md  RESUME_SEARCH_GUIDE.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup-ollama.sh  update.sh
